2008-06-25  Hans-Peter Nilsson  <hp@axis.com>

	Fix strict-aliasing issues with _strtod_r and Storeinc.
	* libc/stdlib/strtod.c (_strtod_r): Change local variables aadj,
	rv, rv0 from double to type U.  Use accessor macros dval, dword0
	and dword1 for all accesses except for the ULtod call, where rv.i
	replaces the pointer cast.
	* libc/stdlib/mprec.h (U): Rename member L to i for easier re-use
	of access macros.  Tweak comment.
	Remove #ifdef'd YES_ALIAS code.
	(dword0, dword1, dval): Define in terms of uncast union member
	access.  Ditto for _DOUBLE_IS_32BITS variants.
	(Storeinc): Replace aliasing-flawed microoptimized definition with
	alternative suggested in comment.  Remove now stale comment.

2008-06-21  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/machine/setjmp.h (_longjmp): Define as function on
	Cygwin.
	(_setjmp): Ditto.

2008-06-18  Eric Blake  <ebb9@byu.net>

	Per Posix, strsignal returns non-const char*.
	* libc/include/string.h (strsignal): Fix return type.

2008-06-17  Ken Werner  <ken.werner@de.ibm.com>

	* libc/machine/spu/sys/linux_syscalls.h: New file to add Linux syscall
	support.

2008-06-16  Ken Werner  <ken.werner@de.ibm.com>

	* libc/machine/spu/sys/dirent.h: Add extern "C" specifier if C++.
	* libc/machine/spu/sys/sched.h: Likewise.
	* libc/machine/spu/sys/syscall.h: Likewise.
	
2008-06-16  Ken Werner  <ken.werner@de.ibm.com>

	* libc/machine/spu/mk_syscalls: Provide .type and .size directives
	in generated assembler files.
	* libc/machine/spu/fprintf.S: Regenerate.
	* libc/machine/spu/fscanf.S: Regenerate.
	* libc/machine/spu/printf.S: Regenerate.
	* libc/machine/spu/scanf.S: Regenerate.
	* libc/machine/spu/snprintf.S: Regenerate.
	* libc/machine/spu/sprintf.S: Regenerate.
	* libc/machine/spu/sscanf.S: Regenerate.
	* libc/machine/spu/stack_reg_va.S (__stack_reg_va): Provide .type
	and .size directives.
	* libc/machine/spu/setjmp.S (setjmp): Likewise.
	(longjmp): Likewise.
	
2008-06-11  Jeff Johnston  <jjohnstn@redhat.com>
